Closed
Bug 1097126
Opened 11 years ago
Closed 11 years ago
Restrict MediaCodec backend on everything except Android L on Beta
Categories
(Firefox for Android Graveyard :: Audio/Video, defect)
Tracking
(firefox33 unaffected, firefox34+ fixed, firefox35 unaffected, firefox36 unaffected, fennec-)
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| firefox33 | --- | unaffected |
| firefox34 | + | fixed |
| firefox35 | --- | unaffected |
| firefox36 | --- | unaffected |
| fennec | - | --- |
People
(Reporter: snorp, Assigned: snorp)
Details
Attachments
(1 file)
|
1.08 KB,
patch
|
blassey
:
review+
lmandel
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
We have some crashes due to bug 1014614. There are fixes coming, but being so close to release I think we want to just disable this on Beta for everything except Android L (which would not work at all without this backend).
| Assignee | ||
Updated•11 years ago
|
tracking-fennec: --- → ?
status-firefox34:
--- → affected
Updated•11 years ago
|
| Assignee | ||
Comment 1•11 years ago
|
||
Attachment #8520852 -
Flags: review?(blassey.bugs)
| Assignee | ||
Comment 2•11 years ago
|
||
Note that this patch will ONLY be applied to beta (34). We want to allow everyone access to this backend on 35 in order to continue working out some kinks.
Updated•11 years ago
|
Attachment #8520852 -
Flags: review?(blassey.bugs) → review+
| Assignee | ||
Comment 3•11 years ago
|
||
Comment on attachment 8520852 [details] [diff] [review]
Restrict MediaCodec backend to Android 5.0 and higher
Approval Request Comment
[Feature/regressing bug #]: 1014614
[User impact if declined]: possible instability in video playback
[Describe test coverage new/current, TBPL]: none
[Risks and why]: trivial patch, only affects android 5.0 users
[String/UUID change made/needed]: none
Attachment #8520852 -
Flags: approval-mozilla-beta?
Comment 4•11 years ago
|
||
Comment on attachment 8520852 [details] [diff] [review]
Restrict MediaCodec backend to Android 5.0 and higher
Beta+
Attachment #8520852 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Updated•11 years ago
|
tracking-firefox34:
--- → +
| Assignee | ||
Comment 5•11 years ago
|
||
| Assignee | ||
Comment 6•11 years ago
|
||
Backed out, as we decided to just disable MediaCodec completely (bug 1097276)
https://hg.mozilla.org/releases/mozilla-beta/rev/b0fea8a116aa
Comment 8•11 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM UTC-4] from comment #7)
> So this whole bug is wontfix then?
That's right.
Status: NEW → RESOLVED
Closed: 11 years ago
Flags: needinfo?(snorp)
Resolution: --- → WONTFIX
Updated•11 years ago
|
tracking-fennec: ? → -
| Assignee | ||
Comment 9•11 years ago
|
||
We're doing this again.
Status: RESOLVED → REOPENED
Resolution: WONTFIX → ---
| Assignee | ||
Comment 10•11 years ago
|
||
This went in a couple days ago:
https://hg.mozilla.org/releases/mozilla-beta/rev/cc4419d99df3
Status: REOPENED → RESOLVED
Closed: 11 years ago → 11 years ago
Resolution: --- → FIXED
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•