Bug 1097126 - Restrict MediaCodec backend to Android 5.0 and higher r=blassey a=lmandel